byobu (5.74) unreleased; urgency=low

  * usr/lib/byobu/include/ec2instancespricing.py: LP: #1286367
    - merged in updated instance pricing script from
      https://github.com/erans/ec2instancespricing

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 17 Feb 2014 15:07:01 -0600

byobu (5.73-0ubuntu1) trusty; urgency=low

  * usr/lib/byobu/include/Makefile.am, usr/lib/byobu/include/tmux-send-
    command-to-all-panes, usr/lib/byobu/include/tmux-send-command-to-
    all-windows, usr/share/byobu/keybindings/f-keys.tmux,
    usr/share/byobu/keybindings/f-keys.tmux.disable,
    usr/share/doc/byobu/help.tmux.txt:
    - add two new keybindings for byobu-tmux, Shift-F9 and Ctrl-F9
    - these will prompt you for a command, and then run that command
      in all splits or windows (respectively)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 17 Feb 2014 15:06:58 -0600

byobu (5.72-0ubuntu1) trusty; urgency=low

  * usr/lib/byobu/include/constants:
    - make sure we export this variable, so that we only need to
      do the expensive test once

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 12 Feb 2014 14:30:38 -0600

byobu (5.71-0ubuntu1) trusty; urgency=low

  * usr/bin/byobu-janitor, usr/lib/byobu/date,
    usr/lib/byobu/include/constants, usr/lib/byobu/include/shutil,
    usr/lib/byobu/time, usr/share/byobu/profiles/tmux,
    usr/share/byobu/profiles/tmuxrc, usr/share/man/man1/byobu.1:
    - LP: #1059127
    - fix longstanding "date and time flash on and off" bug
    - this isn't a great fix, but it's a start
    - basically, we need to use the tmux status native support
      for timestamps
    - support configuration through ~/.byobu/datetime.tmux
    - this will be a difference between byobu-tmux and byobu-screen,
      which is a bummer
    - also, there's more work to be done, in order to enable/disable
      this via F9/byobu-config
  * usr/lib/byobu/include/constants: LP: #1278446
    - ensure that we pick a python that has a proper snack module